--- a/buildvariant.config
+++ b/buildvariant.config
@@ -7,8 +7,8 @@
 	<compartment name="VTP_BUILDT" variant="default"/>
 	<compartment name="SC_TEST" variant="default"/>
 	<compartment name="WDEXTENSIONS" variant="default"/>
-	<compartment name="SC_SFDC" variant="default"/>
 	<compartment name="VOICEVC" variant="default"/>
+	<compartment name="SC_SFDC" variant="default"/>
 	<compartment name="EP_BUILDT" variant="default"/>
 	<compartment name="EP-BASIS-API" variant="default"/>
 	<compartment name="CAF-MF" variant="default"/>
@@ -31,6 +31,7 @@
 	<compartment name="VCFREESTYLEKIT" variant="default"/>
 	<compartment name="ECM-CORE" variant="default"/>
 	<compartment name="WSRM" variant="default"/>
+	<compartment name="P_TEST2_SC" variant="default"/>
 	<compartment name="BRMS-BUILDT" variant="default"/>
 	<compartment name="P_TEAC_SC" variant="default"/>
 	<compartment name="BPEM-MM" variant="default"/>
@@ -46,6 +47,7 @@
 	<compartment name="BPEM-ACC" variant="default"/>
 	<compartment name="BPEM-FACADE" variant="default"/>
 	<compartment name="EAI_PATTERNS" variant="default"/>
+	<compartment name="SC_TEST2" variant="default"/>
 	<compartment name="UISAPUI5_JAVA" variant="default"/>
 	<compartment name="EP-RUNTIME" variant="default"/>
 	<compartment name="BPEM-COLLAB" variant="default"/>
